infrastructure/apptly/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apptly-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apptly-web
  template:
    metadata:
      labels:
        app: apptly-web
    spec:
      containers:
        - name: web
          image: jeff7712/apptlyai:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 101
