infrastructure/apptly/app-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: apptly-route
spec:
  entryPoints:
    - websecure
  rules:
    - match: Host(`apptly.rupan.dev`) || Host(`www.apptly.rupan.dev`)
      kind: Rule
      services:
        - name: apptly-svc
          port: 80
  tls:
    secretName: apptly-tls-secret
